[gd_scene format=3 uid="uid://dlvmo5lc3uwwa"]

[ext_resource type="Script" uid="uid://dlwip6b3xvkga" path="res://scenes/ui/UpgradeItem.gd" id="1_hp6f7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wud7"]
bg_color = Color(0.13333334, 0.13333334, 0.13333334, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_83yvk"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_hf1eo"]
font_size = 18
font_color = Color(0.5019608, 0.5019608, 0.5019608, 1)

[node name="UpgradeItem" type="PanelContainer" unique_id=1602326425]
custom_minimum_size = Vector2(300, 80)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4wud7")
script = ExtResource("1_hp6f7")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2097222015]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1633620220]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer" unique_id=1054685451]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=210735293]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoBox" unique_id=1593557234]
layout_mode = 2
text = "Upgrade: "
label_settings = SubResource("LabelSettings_83yvk")

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoBox" unique_id=869076221]
layout_mode = 2
text = "0 / 10"
label_settings = SubResource("LabelSettings_hf1eo")

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer" unique_id=697295957]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyButton" type="Button" parent="MarginContainer/HBoxContainer" unique_id=797452676]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "100 G"
